--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="مؤسسة اطلالة شاملة التجارية ">
     <meta name="author" content="Mohammed Gomaa">  
     <title>مؤسسة اطلالة</title>
-    <link rel="shortcut icon" href="./data/imgs/Capture.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="./data/imgs/logo.PNG" type="image/x-icon">
     <!-- Main Template CSS File  -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Render All Elements Normally -->
@@ -41,6 +41,10 @@
                     <i class="fas fa-arrow-left"></i>
                 </a>
             </button>
+            <div class="phone">
+                <i class="fas fa-phone-flip"></i>
+                00966545891723
+            </div>
         </div>
     </header>
     <!-- -------------------- End Header -------------------- -->
@@ -49,7 +53,7 @@
         <div class="container">
             <div class="logo">
                 <a href="#">
-                    <img src="./data/imgs/Capture.PNG" alt="logo" loading="lazy">
+                    <img src="./data/imgs/logo.PNG" alt="logo" loading="lazy">
                 </a>
             </div>
             <div class="links">
@@ -201,14 +205,6 @@
                 <!-- link-1 -->
                 <a href="https://wa.me/+966545891723" aria-label="This is my whatsapp" target="_blank" class="whatsapp">
                     <i class="fab fa-whatsapp"></i>
-                </a>
-                <!-- link-2 -->
-                <a href="https://www.facebook.com" aria-label="This is my facebook" target="_blank" class="facebook">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <!-- link-3 -->
-                <a href="https://www.instagram.com" aria-label="This is my instagram" target="_blank" class="instagram">
-                    <i class="fab fa-instagram"></i>
                 </a>
             </div>
             <p>جميع الحقوق محفوظة ، مؤسسة اطلالة <span>&COPY;2024</span></p>
