add offer in banner

--- a/index.html
+++ b/index.html
@@ -30,20 +30,32 @@
     <header class="header" id="header">
         <div class="overlay"></div>
         <div class="container">
+            <div class="imgs">
+                <div class="image">
+                    <img src="data/imgs/offer1.jpeg" alt="logo" loading="lazy">
+                </div>
+                <div class="image">
+                    <img src="data/imgs/10.jpg" alt="logo" loading="lazy">
+                </div>
+            </div>
             <h1 class="title-header">
-                مؤسسة
-                <span class="name">اطلالة شاملة التجارية</span>
+                عــرض خــاص
             </h1>
-            <p class="title-header-info">شركة متخصصة في بيع كابينات استحمام زجاجية وأطقم استحمام تركية عالية الجودة ، تعتبر الشركة واحدة من الرواد في توريد
-            منتجات الحمام ذات الجودة العالية والتصميم الأنيق</p>
-            <button class="view-my-work">
+            <p class="title-header-info">
+                كابينة شور زجاج صيني مع طقم شور مسطرة تركي كاملة بدون خلاط مقاس متر في متر
+                <br>
+                <span class="dr">التوصيل مجان في جدة ومكة المكرمة ومدينة الطائف</span>
+                <br>
+                <span class="price">السعر ٥٠٠ ريال شامل الضريبة</span>
+            </p>
+            <!-- <button class="view-my-work">
                 <a href="#projects">شاهد بعض أعمالنا
                     <i class="fas fa-arrow-left"></i>
                 </a>
-            </button>
+            </button> -->
             <div class="phone">
                 <i class="fas fa-phone-flip"></i>
-                00966545891723
+                0545891723
             </div>
         </div>
     </header>
@@ -87,6 +99,12 @@
     <section class="about" id="about">
         <h2 class="main-title">عننا</h2>
         <div class="container">
+            <h1 class="title-header">
+                <span class="name">اطلالة شاملة التجارية</span>
+            </h1>
+            <p class="title-header-info">شركة متخصصة في بيع كابينات استحمام زجاجية وأطقم استحمام تركية عالية الجودة ، تعتبر الشركة
+                واحدة من الرواد في توريد
+                منتجات الحمام ذات الجودة العالية والتصميم الأنيق</p>
             <!-- Start BOXES -->
             <div class="boxes">
                 <!-- BOX-1 -->
